# calchecker

./: .gitignore  README.md  pants.toml  pyproject.toml  ruff.toml
.github/workflows/: dependabot_script.yml  scheduled_runs.yml
.trunk/: trunk.yaml
calchecker/: __main__.py
tests/: BUILD  test_main.py
